# iu9-graphics-paper

./: .gitignore  CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: bezier.cpp.4D445E4E11710024.idx  bezier.hpp.5567707201ECC3C9.idx  curve.cpp.B3BF51D7AAA174D8.idx  curve.hpp.37A26180DC53AE4B.idx  main.cpp.31902DBD2C99070A.idx  point.hpp.4EC3678F16F9BB06.idx  rectangle.cpp.4F4C29D73E426EA8.idx  rectangle.hpp.6F43FBDA8FD6665D.idx
.github/workflows/: ci.yml
data/: full_digraph.tex  k10.dot  k10.tex  k6.dot  k6.tex  small.tex  small_graph.tex  test_1_skewness.tex  test_2_skewness.tex  test_5_quasi_planar.tex  test_non_rac.tex  test_rac.tex  test_template.tex  tiny.dot  tiny.tex  tiny_graph.dot
data/dot_examples/: tiny_graph.tex
lib/: CMakeLists.txt
lib/bezier/: CMakeLists.txt
lib/bezier/include/: curve.hpp  point.hpp  rectangle.hpp
lib/bezier/src/: curve.cpp  point.cpp  rectangle.cpp
lib/bezier/tests/: CMakeLists.txt  tests.cpp
lib/graph/: CMakeLists.txt
lib/graph/include/: edge.hpp  graph.hpp  vertex.hpp
lib/graph/src/: edge.cpp  graph.cpp  vertex.cpp
lib/graph/tests/: tests.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.hpp  vector.hpp
lib/utils/src/: utils.cpp  vector.cpp
lib/utils/tests/: CMakeLists.txt  tests.cpp
src/: main.cpp
